--- a/index.html
+++ b/index.html
@@ -185,8 +185,31 @@
       <div class="col-md-4">
       </div><!-- closes colmd4 -->
       </footer>
-    </div><!-- closes container fluid for first clean white footer -->
-<footer>&nbsp;</footer>
+    </div><!-- closes container fluid for first usfsp green footer -->
+<footer itemscope itemtype="http://schema.org/Person">
+<div class="container-fluid" style="background:#000000;">
+   <h5>Contact Information</h5>
+     <dl>
+         <dt>Name</dt>
+         <dd itemprop="name">Sharon</dd>
+         <dt>Position</dt>
+         <dd><span
+               itemprop="jobTitle">User Applications Specialist
+             </span> for
+             <span itemprop="affiliation">USFSP
+             </span>
+          </dd>
+     </dl>
+     <h5>Pages</h5>
+     <ul>
+         <li><a href="https://cook-my-catch.github.io/"
+             itemprop="url">Github Page</a></li>
+         <li><a href="http://cook-my-catch.com"
+             itemprop="url">Scratch Site</a></li>
+     </ul>
+</div><!-- closes second black footer -->
+
+</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
