--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
       </footer>
     </div><!-- closes container fluid for first usfsp green footer -->
 <footer itemscope itemtype="http://schema.org/Person">
-<div class="container-fluid" style="background:#000000;">
+<div class="container-fluid" style="background:#000000;color:#ffffff;">
+  <div class="col-md-12">
    <h5>Contact Information</h5>
      <dl>
          <dt>Name</dt>
@@ -207,8 +208,8 @@
          <li><a href="http://cook-my-catch.com"
              itemprop="url">Scratch Site</a></li>
      </ul>
-</div><!-- closes second black footer -->
-
+    </div><!-- closes col md12 for second black footer -->
+</div><!-- closes container fluid for second black footer -->
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
