--- a/index.html
+++ b/index.html
@@ -190,9 +190,11 @@
 <div class="container-fluid" style="background:#000000;color:#ffffff;">
   <div class="col-md-12">
    <h5>Contact Information</h5>
+   </div><!-- closes col md12 -->
+   <div class="col-md-4">
      <dl>
          <dt>Name</dt>
-         <dd itemprop="name">Sharon</dd>
+         <dd itemprop="name">Sharon Austin</dd>
          <dt>Position</dt>
          <dd><span
                itemprop="jobTitle">User Applications Specialist
@@ -208,7 +210,48 @@
          <li><a href="http://cook-my-catch.com"
              itemprop="url">Scratch Site</a></li>
      </ul>
-    </div><!-- closes col md12 for second black footer -->
+     </div><!--closes col md4 -->
+     <div class="col-md-4">
+     <dl>
+         <dt>Name</dt>
+         <dd itemprop="name">Sharon Austin</dd>
+         <dt>Position</dt>
+         <dd><span
+               itemprop="jobTitle">User Applications Specialist
+             </span> for
+             <span itemprop="affiliation">USFSP
+             </span>
+          </dd>
+     </dl>
+     <h5>Pages</h5>
+     <ul>
+         <li><a href="https://cook-my-catch.github.io/"
+             itemprop="url">Github Page</a></li>
+         <li><a href="http://cook-my-catch.com"
+             itemprop="url">Scratch Site</a></li>
+     </ul>
+     </div><!--closes col md4 -->
+     <div class="col-md-4">
+     <dl>
+         <dt>Name</dt>
+         <dd itemprop="name">Sharon Austin</dd>
+         <dt>Position</dt>
+         <dd><span
+               itemprop="jobTitle">User Applications Specialist
+             </span> for
+             <span itemprop="affiliation">USFSP
+             </span>
+          </dd>
+     </dl>
+     <h5>Pages</h5>
+     <ul>
+         <li><a href="https://cook-my-catch.github.io/"
+             itemprop="url">Github Page</a></li>
+         <li><a href="http://cook-my-catch.com"
+             itemprop="url">Scratch Site</a></li>
+     </ul>
+     </div><!--closes col md4 -->
+  </div><!-- closes col md12 for second black footer -->
 </div><!-- closes container fluid for second black footer -->
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
