--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <footer itemscope itemtype="http://schema.org/Person">
 <div class="container-fluid" style="background:#000000;color:#ffffff;">
   <div class="col-md-12">
-   <h5>Contact Information</h5>
+   <h5>Contact</h5>
    </div><!-- closes col md12 -->
    <div class="col-md-4">
      <dl>
@@ -217,8 +217,8 @@
              itemprop="url">Scratch Site</a></li>
      </ul>
     </div><!--closes col md4 -->
-  </div><!-- closes col md12 for second black footer -->
-</div><!-- closes container fluid for second black footer -->
+    </div><!-- closes col md12 for second black footer -->
+  </div><!-- closes container fluid for second black footer -->
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
