--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
         <h3>Image One</h3>
-        <img src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figure id="fig1">
+        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption id="figcaptionimg1">Caption for Figure One</figcaption>
+        </figure>
         <h4>content</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
