--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
          <li><a href="http://cook-my-catch.com"
              itemprop="url">Scratch Site</a></li>
      </ul>
-    </div><!--closes col md4 -->
-    </div><!-- closes col md12 for second black footer -->
-  </div><!-- closes container fluid for second black footer -->
+      </div>
+    </div>
+  </div>
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
