--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
         <figcaption id="figcaptionimg1">Caption for Figure One</figcaption>
         </figure>
-        <h4>content</h4>
+        <h4>content with figure captioning</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Two</h3>
@@ -221,7 +221,6 @@
      </ul>
       </div>
     </div>
-  </div>
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
