--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
-        <h3>Image One</h3>
+        <h3>Image One: Console Tool</h3>
         <figure id="fig1">
-        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool.  Most warnings were of a failure to load resource.">
         <figcaption id="figcaptionimg1">Caption for Figure One</figcaption>
         </figure>
-        <h4>content with figure captioning</h4>
+        <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Two</h3>
