--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <!-- check for below -->
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://cook-my-catch.com/bootstrap-master-1july2015/../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="http://cook-my-catch.com/bootstrap-master-1july2015/bootstrap-master/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
                        
