--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Two</h3>
-        <img src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+          <figure id="fig2">
+        <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption id="figcaptionimg2">Caption for Figure Two</figcaption>
+        </figure>
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
