--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h3>Image Two</h3>
+          <h3>Image Two: W3C Nu Validator</h3>
           <figure id="fig2">
         <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
         <figcaption id="figcaptionimg2">Caption for Figure Two</figcaption>
