--- a/index_backup1.html
+++ b/index_backup1.html
@@ -79,6 +79,7 @@
         <div class="col-md-8">
           <section>
           <h2>Introduction</h2>
+          <h3>Many questons arose while creating this page--even the simplest questions, such as what validation really means (it's not the same as conformance), "who" should be the final authority on validation (W3C and WCAG are not in agreement with each other) "how" structure should be evaluated (outlines are still used by assistive technology, but they do not necessarily align with the DOM tree) and "how much" is the accessibility improved with HTML5 features (e.g., are captions read by a screen reader?  It turns out they are not, and therefore alt text is still required).</h3>
           </section>
           </div><!-- closes col md4 -->
       <div class="col-md-4">
@@ -102,8 +103,11 @@
         <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h3>Image Two</h3>
-        <img src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+          <h3>Image Two: W3C Nu Validator</h3>
+          <figure id="fig2">
+        <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption id="figcaptionimg2">Caption for Figure Two</figcaption>
+        </figure>
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
