--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@
         <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
         <figcaption id="figcaptionimg2">Caption for Figure Two</figcaption>
         </figure>
-        <h4>content</h4>
+        <h4>This is the validator I relied on most heavily.</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Three</h3>
-        <img src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
-        <h4>content</h4>
+          <h3>Image Three: W3C Validator</h3>
+          <figure id="fig3">
+        <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption id="figcaptionimg3">Caption for Figure Three.</figcaption>
+        <h4>This is the validator that is older, and offers the advantage of having most of the bugs worked out of it.  However, it recommeneded using the NuValidator for HTML5</h4>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
