--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
         <h4>This is the validator I relied on most heavily.</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Three: W3C Validator</h3>
           <figure id="fig3">
         <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
-        <figcaption id="figcaptionimg3">Caption for Figure Three.</figcaption>
-        <h4>This is the validator that is older, and offers the advantage of having most of the bugs worked out of it.  However, it recommeneded using the NuValidator for HTML5</h4>
+        <figcaption id="figcaptionimg3"><strong>W3C Validator</strong></figcaption>
+        <a href="https://validator.w3.org/">Link to W3C Validator</a>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
