--- a/index.html
+++ b/index.html
@@ -111,8 +111,11 @@
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Three</h3>
-        <img src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+          <h3>Image Three: W3C Validator</h3>
+          <figure id="fig3">
+        <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption id="figcaptionimg3">Caption for Figure Three</figcaption>
+        </figure>
         <h4>content</h4>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
@@ -152,17 +155,20 @@
       <h2>Finding the Right Styles</h2>
     </div>
       <div class="col-md-4">
-        <h3>Image One</h3>
-        <img src="http://cook-my-catch.com/T3special/BrowserToolStyle.jpg" class="img-responsive" alt="Screenshot showing default interface.">
+        <h3>Image Four</h3>
+        <figure id="img4">
+        <img id="fig4" src="http://cook-my-catch.com/T3special/BrowserToolStyle.jpg" class="img-responsive" alt="Screenshot showing default interface.">
+        <figcaption>Caption for Figure Four</figcaption>
+        </figure>
         <h4>content</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h3>Image Two</h3>
+          <h3>Image Five</h3>
         <img src="http://cook-my-catch.com/T3special/Styles-1.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Three</h3>
+          <h3>Image Six</h3>
         <img src="http://cook-my-catch.com/T3special/Styles-2.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
       </div><!-- closes md4 -->
