--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <h3>Image One: Console Tool</h3>
         <figure id="fig1">
         <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool, in this case showing error messages of failed script delivery.">
-        <figcaption id="figcaptionimg1"><h3>Using Chrome Console Tool in Browser</h3></figcaption>
+        <figcaption id="figcaptionimg1">Using Chrome Console Tool in Browser</figcaption>
         </figure>
         <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
       </div><!-- closes colmd4 -->
@@ -106,7 +106,7 @@
           <h3>Image Two: W3C Nu Validator</h3>
           <figure id="fig2">
         <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing the interface for the NuValidator.">
-        <figcaption id="figcaptionimg2"><h3>Interface for W3C NuValidator for HTML5</h3></figcaption>
+        <figcaption id="figcaptionimg2">Interface for W3C NuValidator for HTML5</figcaption>
         </figure>
         <h4>content</h4>
       </div><!-- closes md4 -->
@@ -114,7 +114,7 @@
           <h3>Image Three: W3C Validator</h3>
           <figure id="fig3">
         <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing interface for standard W3C validator.">
-        <figcaption id="figcaptionimg3"><h3>Standard W3C Validator</h3></figcaption>
+        <figcaption id="figcaptionimg3">Standard W3C Validator</figcaption>
         </figure>
         <h4>content</h4>
         </div><!-- closes md4 -->
