--- a/index_July1_a.html
+++ b/index_July1_a.html
@@ -165,9 +165,9 @@
     </div><!-- closes container fluid -->    
     </section>
     </main><!-- all else are references -->
-    <div class="container-fluid footer_color">
+    <div class="container-fluid footer_color footer_one">
     <footer><!-- USFSP footer color -->
-        <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#ffffff;color:#ffffff;">
+        <div class="col-md-12">
       <h2>References</h2>
     </div>
       <div class="col-md-4">
