--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     </div><!-- closes container fluid -->    
     </section>
     </main><!-- all else are references -->
-    <div class="container-fluid footer_color footer_one">
+    <div class="container-fluid footer_color">
     <footer><!-- USFSP footer color -->
-        <div class="col-md-12>
+        <div class="col-md-12 footer_one">
       <h2>References</h2>
     </div>
       <div class="col-md-4">
