--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     </div><!-- closes container fluid -->    
     </section>
     </main><!-- all else are references -->
-    <div class="container-fluid footer_color">
+    <div class="container-fluid footer_color footer_one">
     <footer><!-- USFSP footer color -->
-        <div class="col-md-12 footer_one">
-      <h2>References</h2>
-    </div>
+        <div class="col-md-12">
+          <h2>References</h2>
+        </div>
       <div class="col-md-4">
       <ul>
         <li><a href="http://gsnedders.html5.org/outliner/">HTML5 Outliner Tool</a></li>
@@ -200,8 +200,9 @@
             <li><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></li> 
           </ul>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4">third column
       </div><!-- closes colmd4 -->
+      </div>
       </footer>
     </div><!-- closes container fluid for first usfsp green footer -->
 <footer itemscope itemtype="http://schema.org/Person">
