--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </footer>
     </div><!-- closes container fluid for first usfsp green footer -->
 <footer itemscope itemtype="http://schema.org/Person">
-<div class="container-fluid" style="background:#000000;color:#ffffff;">
+<div class="container-fluid footer_two">
   <div class="col-md-12">
    <h5>Contact</h5>
    </div><!-- closes col md12 -->
