--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </main><!-- all else are references -->
     <div class="container-fluid footer_color footer_one">
     <footer><!-- USFSP footer color -->
-        <div class="col-md-12">
+        <div class="col-md-12 footer_one_underline">
           <h2>References</h2>
         </div>
       <div class="col-md-4">
