--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
       <div class="col-md-4">
           <h3>Image Six</h3>
           <figure id="fig6">
-        <img id="img6" src="http://cook-my-catch.com/T3special/Styles-2.jpg" class="img-responsive" alt="Screenshot showing the use of Firebug to extract css styles from USFSP webpage.">
-        <figcaption id="figcaptionimg6">Using Firebug to find css styles from USFSP web page </figcaption>
+          <img id="img6" src="http://cook-my-catch.com/T3special/Styles-2.jpg" class="img-responsive" alt="Screenshot showing the use of Firebug to extract css styles from USFSP webpage.">
+          <figcaption id="figcaptionimg6">Using Firebug to find css styles from USFSP web page </figcaption>
+        </figure>
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->    
     </section>
