--- a/index_backup1.html
+++ b/index_backup1.html
@@ -79,7 +79,7 @@
         <div class="col-md-8">
           <section>
           <h2>Introduction</h2>
-          <h3>Many questons arose while creating this page--even the simplest questions, such as what validation really means (it's not the same as conformance), "who" should be the final authority on validation (W3C and WCAG are not in agreement with each other) "how" structure should be evaluated (outlines are still used by assistive technology, but they do not necessarily align with the DOM tree) and "how much" is the accessibility improved with HTML5 features (e.g., are captions read by a screen reader?  It turns out they are not, and therefore alt text is still required).</h3>
+          <h3>Many questons arose while creating this page--even the simplest questions, such as what validation really means (it's not the same as conformance), "who" should be the final authority on validation (W3C and WCAG are not in agreement with each other) "how" structure should be evaluated (outlines are still used by assistive technology, but they do not necessarily align with the DOM tree) and "how much" is the accessibility improved with HTML5 features (e.g., are captions read by a screen reader?  It turns out they are not, and therefore alt text is still required).  There were many checks between HTML5 semantics and Bootstrap.  Take, for example, the autofocus feature in forms; using the autofocus attribute for HTML5 forms will not work in certain features of Bootstrap, such as in modals.  <a href="http://getbootstrap.com/javascript/#modals">See this link for more information.</a></h3>
           </section>
           </div><!-- closes col md4 -->
       <div class="col-md-4">
