--- a/index_backup2.html
+++ b/index_backup2.html
@@ -29,7 +29,7 @@
   </head>
   <body class="wrap_all">
     <div class="container-fluid header hfgreen">
-      <div class="col-md-12">
+      <div class="row">
     <header>
       <h1>Coding Exercise</h1>
       </header>
@@ -71,7 +71,7 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
-      <div class="col-md-12">
+      <div class="row">
       <header><h2>How I Built This Web Page</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
@@ -91,7 +91,7 @@
      </div><!-- closes container-fluid main_color -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
-      <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
+      <div class="row" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
@@ -151,7 +151,7 @@
     </section>
     <section><!-- opens section for finding the right styles -->
     <div class="container-fluid main_color" style="background:#e3e7ea">
-    <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
+    <div class="row" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
       <h2>Finding the Right Styles</h2>
     </div>
       <div class="col-md-4">
@@ -183,7 +183,7 @@
     </main><!-- all else are references -->
     <div class="container-fluid footer_color footer_one">
       <footer>
-        <div class="col-md-12 footer_one_underline">
+        <div class="row footer_one_underline">
           <h2>References</h2>
         </div><!-- closes colmd12 underline-->
       <div class="col-md-4">
@@ -207,7 +207,7 @@
     </div><!-- closes container fluid for first usfsp green footer -->
 <footer itemscope itemtype="http://schema.org/Person">
 <div class="container-fluid footer_two">
-  <div class="col-md-12">
+  <div class="row">
    <h5>Contact</h5>
    </div><!-- closes col md12 -->
    <div class="col-md-4">
