--- a/index_backup2.html
+++ b/index_backup2.html
@@ -28,7 +28,7 @@
     <!-- end USFSP -->
   </head>
   <body class="wrap_all">
-    <div class="container-fluid header hfgreen">
+    <div class="row header hfgreen">
       <div class="col-md-12">
     <header>
       <h1>Coding Exercise</h1>
@@ -70,12 +70,12 @@
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
-    <div class="container-fluid main_color">
+    <div class="row main_color">
       <div class="col-md-12">
       <header><h2>How I Built This Web Page</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
-    <div class="container-fluid main_color" style="background:#e3e7ea">
+    <div class="row main_color" style="background:#e3e7ea">
         <div class="col-md-8">
           <section>
           <h2>Introduction</h2>
@@ -90,7 +90,7 @@
       </div><!-- closes colmd4 -->
      </div><!-- closes container-fluid main_color -->
     <section>
-    <div class="container-fluid main_color" style="background:#e3e7ea">
+    <div class="row main_color" style="background:#e3e7ea">
       <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
@@ -121,7 +121,7 @@
       </div><!-- closes container fluid -->  
     </section>
     <section>
-    <div class="container-fluid main_color">
+    <div class="row main_color">
       <div class="col-md-4">
         <h2>Outlines</h2>
         <h3>4.3.10.1 Creating an outline</h3>
@@ -150,7 +150,7 @@
     </div><!-- closes container fluid -->
     </section>
     <section><!-- opens section for finding the right styles -->
-    <div class="container-fluid main_color" style="background:#e3e7ea">
+    <div class="row main_color" style="background:#e3e7ea">
     <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
       <h2>Finding the Right Styles</h2>
     </div>
@@ -181,7 +181,7 @@
     </div><!-- closes container fluid -->    
     </section>
     </main><!-- all else are references -->
-    <div class="container-fluid footer_color footer_one">
+    <div class="row footer_color footer_one">
       <footer>
         <div class="col-md-12 footer_one_underline">
           <h2>References</h2>
@@ -206,7 +206,7 @@
       </footer>
     </div><!-- closes container fluid for first usfsp green footer -->
 <footer itemscope itemtype="http://schema.org/Person">
-<div class="container-fluid footer_two">
+<div class="row footer_two">
   <div class="col-md-12">
    <h5>Contact</h5>
    </div><!-- closes col md12 -->
