--- a/index_backup2.html
+++ b/index_backup2.html
@@ -29,12 +29,12 @@
   </head>
   <body class="wrap_all">
     <div class="container-fluid header hfgreen">
-      <div class="col-md-12">
+      <div class="row">
     <header>
-      <h1>Coding Exercise</h1>
+      <h1 class="sr-only">Coding Exercise</h1>
       </header>
       <nav>
-        <header><h3>Nav Menu</h3></header>
+        <header class="sr-only"><h3>Nav Menu</h3></header>
         <ul>
           <li>Source Documents</li>
           <li>Validation</li>
