--- a/index_backup2.html
+++ b/index_backup2.html
@@ -35,7 +35,7 @@
       </header>
       <nav>
         <header class="sr-only"><h3>Nav Menu</h3></header>
-        <ul>
+        <ul class="sr-only">
           <li>Source Documents</li>
           <li>Validation</li>
           <li>Illustrations</li>
