--- a/index_backup2.html
+++ b/index_backup2.html
@@ -33,9 +33,9 @@
     <header>
       <h1 class="sr-only">Coding Exercise</h1>
       </header>
-      <nav>
-        <header class="sr-only"><h3>Nav Menu</h3></header>
-        <ul class="sr-only">
+      <nav class="sr-only">
+        <header><h3>Navigation</h3></header>
+        <ul>
           <li>Source Documents</li>
           <li>Validation</li>
           <li>Illustrations</li>
