--- a/index_backup2.html
+++ b/index_backup2.html
@@ -182,7 +182,7 @@
     </section>
     </main><!-- all else are references -->
     <div class="container-fluid footer_color footer_one">
-      <footer>
+      <footer class="row">
         <div class="col-md-12 footer_one_underline">
           <h2>References</h2>
         </div><!-- closes colmd12 underline-->
@@ -205,7 +205,7 @@
       </div><!-- closes colmd4 three-->
       </footer>
     </div><!-- closes container fluid for first usfsp green footer -->
-<footer itemscope itemtype="http://schema.org/Person">
+<footer itemscope itemtype="http://schema.org/Person" class="row">
 <div class="container-fluid footer_two">
   <div class="col-md-12">
    <h5>Contact</h5>
