--- a/index_backup2.html
+++ b/index_backup2.html
@@ -66,7 +66,7 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-    <h1>Logo</h1>
+    <h2 class="logo">Logo</h2>
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
