--- a/index_backup2.html
+++ b/index_backup2.html
@@ -66,9 +66,12 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-    <h2 class="logo">Logo</h2>
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
+      <div class="row">
+        <div class="col-md-1 logo"><h2>Logo</h2></div>
+        <div class="col-md-11">&nbsp;</div>
+      </div><!-- closes second row -->
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
