--- a/index_backup2.html
+++ b/index_backup2.html
@@ -69,7 +69,7 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
       <div class="row">
-        <div class="col-md-1 logo"><h2>Logo</h2></div>
+        <div class="col-md-1 logo" style="margin-top:25px;"><h2>Logo</h2></div>
         <div class="col-md-11">&nbsp;</div>
       </div><!-- closes second row -->
   </div><!-- closes container fluid -->
