--- a/index_backup2.html
+++ b/index_backup2.html
@@ -95,7 +95,7 @@
      </div><!-- closes container-fluid main_color -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
-      <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
+      <div class="col-md-12" style="bb">
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
@@ -155,7 +155,7 @@
     </section>
     <section><!-- opens section for finding the right styles -->
     <div class="container-fluid main_color" style="background:#e3e7ea">
-    <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
+    <div class="col-md-12" style="bb">
       <h2>Finding the Right Styles</h2>
     </div>
       <div class="col-md-4">
