--- a/index_vids1.html
+++ b/index_vids1.html
@@ -89,6 +89,39 @@
         <a href="https://www.w3.org/wiki/HTML/Usage/Headings/h1only">Why we are told using multiple h1 tags is BAD</a>
       </div><!-- closes colmd4 -->
      </div><!-- closes container-fluid main_color -->
+     <!-- first set of videos here -->
+     <section>
+    <div class="container-fluid main_color" style="background:#ff0000">
+      <div class="col-md-12" style="bb;">
+        <h2>Vides</h2>
+      </div><!-- closes colmd12 -->
+      <div class="col-md-4">
+        <h3>Video One: Console Tool</h3>
+        <figure id="fig1">
+        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool, in this case showing error messages of failed script delivery.">
+        <figcaption id="figcaptionimg1">Using Chrome Console Tool in Browser</figcaption>
+        </figure>
+        <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
+      </div><!-- closes colmd4 -->
+      <div class="col-md-4">
+          <h3>Image Two: W3C Nu Validator</h3>
+          <figure id="fig2">
+        <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing the interface for the NuValidator.">
+        <figcaption id="figcaptionimg2">Interface for W3C NuValidator for HTML5</figcaption>
+        </figure>
+        <h4>content</h4>
+      </div><!-- closes md4 -->
+      <div class="col-md-4">
+          <h3>Image Three: W3C Validator</h3>
+          <figure id="fig3">
+        <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing interface for standard W3C validator.">
+        <figcaption id="figcaptionimg3">Standard W3C Validator</figcaption>
+        </figure>
+        <h4>content</h4>
+        </div><!-- closes md4 -->
+      </div><!-- closes container fluid -->  
+    </section>
+     <!-- first set of videos end here -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
       <div class="col-md-12" style="border-bottom-style:solid;border-width:3px;border-bottom-color:#000000;">
