--- a/index_vids1.html
+++ b/index_vids1.html
@@ -97,11 +97,17 @@
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
         <h3>Video One: Console Tool</h3>
-        <figure id="fig1">
-        <img id="img1" src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing use of a browser console tool, in this case showing error messages of failed script delivery.">
-        <figcaption id="figcaptionimg1">Using Chrome Console Tool in Browser</figcaption>
-        </figure>
-        <h4>Captions are displayed on the web page, but not in outline view.  Alt text is necessary for screen-readers.</h4>
+        <video height="272" width="640"    
+       poster="http://content.bitsontherun.com/thumbs/q1fx20VZ-640.jpg"  
+       crossorigin="anonymous" 
+       controls>
+  <source src="http://demo.jwplayer.com/html5-report/sintel.mp4" 
+          type="video/mp4"> 
+  <source src="http://demo.jwplayer.com/html5-report/sintel.webm" 
+          type="video/webm">
+  <track src="http://demo.jwplayer.com/html5-report/sintel-captions.vtt" 
+         kind="captions" label="Closed Captions" default>
+        </video>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Two: W3C Nu Validator</h3>
