--- a/index_vids1.html
+++ b/index_vids1.html
@@ -96,11 +96,8 @@
         <h2>Vides</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
-        <h3>Video One: Console Tool</h3>
-        <video width="300"    
-       poster="###poster.jpg"  
-       
-       controls>
+        <h3>Video One: No Poster</h3>
+        <video width="300" height="200" controls="controls">
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
           type="video/mp4"> 
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.webm" 
