--- a/index_vids1.html
+++ b/index_vids1.html
@@ -93,10 +93,21 @@
      <section>
     <div class="container-fluid main_color" style="background:#ff0000">
       <div class="col-md-12" style="bb;">
-        <h2>Vides</h2>
+        <h2>Videos</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
         <h3>Video One: No Poster</h3>
+        <video width="300" height="200" controls="controls">
+  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1_converted.mp4" 
+          type="video/mp4"> 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1.webm" 
+          type="video/webm">
+  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1.ogv" 
+          type="video/ogv">
+        </video>
+      </div><!-- closes colmd4 -->
+      <div class="col-md-4">
+      <h3>Video Two: No Poster</h3>
         <video width="300" height="200" controls="controls">
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
           type="video/mp4"> 
@@ -105,22 +116,17 @@
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
           type="video/ogv">
         </video>
-      </div><!-- closes colmd4 -->
-      <div class="col-md-4">
-          <h3>Image Two: W3C Nu Validator</h3>
-          <figure id="fig2">
-        <img id="img2" src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing the interface for the NuValidator.">
-        <figcaption id="figcaptionimg2">Interface for W3C NuValidator for HTML5</figcaption>
-        </figure>
-        <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Three: W3C Validator</h3>
-          <figure id="fig3">
-        <img id="img3" src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing interface for standard W3C validator.">
-        <figcaption id="figcaptionimg3">Standard W3C Validator</figcaption>
-        </figure>
-        <h4>content</h4>
+         <h3>Video Three: No Poster</h3>
+        <video width="300" height="200" controls="controls">
+  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
+          type="video/mp4"> 
+  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.webm" 
+          type="video/webm">
+  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
+          type="video/ogv">
+        </video>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
