--- a/index_vids1.html
+++ b/index_vids1.html
@@ -96,7 +96,7 @@
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
-        <h3>Video One: No Poster</h3>
+        <h3>Video One: Basic Default Form</h3>
         <video width="300" height="200" controls="controls">
   <source src="http://cook-my-catch.com/CEvids/sr-basicForm1_converted.mp4" 
           type="video/mp4"> 
@@ -107,7 +107,7 @@
         </video>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-      <h3>Video Two: No Poster</h3>
+      <h3>Video Two: Add Labels to Basic Form on Chrome</h3>
         <video width="300" height="200" controls="controls">
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
           type="video/mp4"> 
@@ -116,15 +116,16 @@
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
           type="video/ogv">
         </video>
+        <h4>Note that the screen reader does not announce the next steps</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-         <h3>Video Three: No Poster</h3>
+         <h3>Video Three: Add Labels to Basic Form on Firefox</h3>
         <video width="300" height="200" controls="controls">
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formFirefox_converted.mp4" 
           type="video/mp4"> 
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.webm" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formFirefox.webm" 
           type="video/webm">
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formFirefox.ogv" 
           type="video/ogv">
         </video>
         </div><!-- closes md4 -->
