--- a/index_vids1.html
+++ b/index_vids1.html
@@ -139,30 +139,29 @@
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
-        <h3>Video One: Basic Default Form</h3>
+        <h3>Video Four: Collapsed No Focus</h3>
         <video width="300" controls="controls">
-  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1_converted.mp4" 
+  <source src="http://cook-my-catch.com/CEvids/sr-collapsedannounced-nofocus_converted.mp4" 
           type="video/mp4"> 
-  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1.webm" 
+  <source src="http://cook-my-catch.com/CEvids/sr-collapsedannounced-nofocus.webm" 
           type="video/webm">
-  <source src="http://cook-my-catch.com/CEvids/sr-basicForm1.ogv" 
+  <source src="http://cook-my-catch.com/CEvids/sr-collapsedannounced-nofocus.ogv" 
           type="video/ogv">
         </video>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-      <h3>Video Two: Add Labels to Basic Form on Chrome</h3>
+      <h3>Video Five: Basic HTML5 Form on Chrome</h3>
         <video width="300" controls="controls">
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation_converted.mp4" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formChrome_converted.mp4" 
           type="video/mp4"> 
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.webm" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formChrome.webm" 
           type="video/webm">
-  <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
+  <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formChrome.ogv" 
           type="video/ogv">
         </video>
-        <h4>Note that the screen reader does not announce the next steps</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-         <h3>Video Three: Add Labels to Basic Form on Firefox</h3>
+         <h3>Video Six: Basic HTML5 Form on Firefox</h3>
         <video width="300" controls="controls">
   <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formFirefox_converted.mp4" 
           type="video/mp4"> 
