--- a/index_vids1.html
+++ b/index_vids1.html
@@ -92,7 +92,7 @@
      <!-- first set of videos here -->
      <section>
     <div class="container-fluid main_color" style="background:#ffffff">
-      <div class="col-md-12" style="bb;">
+      <div class="col-md-12 bb">
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
@@ -136,7 +136,7 @@
      <!--second set of videos starts here -->
      <section>
     <div class="container-fluid main_color" style="background:#ff0000">
-      <div class="col-md-12" style="bb;">
+      <div class="col-md-12 bb">
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
@@ -208,7 +208,7 @@
      <!-- rearrange ends here -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea;">
-      <div class="col-md-12" style="bb;">
+      <div class="col-md-12 bb">
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
@@ -241,7 +241,7 @@
     
     <section><!-- opens section for finding the right styles -->
     <div class="container-fluid main_color" style="background:#e3e7ea">
-    <div class="col-md-12" style="bb;">
+    <div class="col-md-12 bb">
       <h2>Finding the Right Styles</h2>
     </div>
       <div class="col-md-4">
