--- a/index_backup2.html
+++ b/index_backup2.html
@@ -91,15 +91,18 @@
      </div><!-- closes container-fluid main_color -->
      <!-- rearrange starts here -->
      <section>
-    <div class="container-fluid main_color bb">
+    <div class="container-fluid main_color">
+      <div class="col-md-12 bb">
+        <h2>Points for Consideration</h2>
+      </div>
       <div class="col-md-4">
-        <h2>Outlines</h2>
-        <h3>4.3.10.1 Creating an outline</h3>
+        <h3>Outlines</h3>
+        <h4>4.3.10.1 Creating an outline</h4>
         <h4>There are currently no known implementations of the outline algorithm in graphical browsers or assistive technology user agents, although the algorithm is implemented in other software such as conformance checkers. Therefore the outline algorithm cannot be relied upon to convey document structure to users. Authors are advised to use heading rank (h1-h6) to convey document structure.</h4>
         <h4>Source: <a href="http://www.w3.org/TR/html5/sections.html#outlines">4.3. HTML5 Outlines</a></h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h2>Conformance:</h2>
+          <h3>Conformance:</h3>
           <ul>
             <li>Conformance and Validation are not the same thing.</li>
             <li>There are differences between the w3c validator and the nu markup checker.</li>
@@ -109,7 +112,6 @@
           <h4>Source: <a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
       </div><!-- colmd4 -->
       <div class="col-md-4">
-          <h2>Aside</h2>
           <h3>Why we care about outlines.</h3>
           <h4>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.<a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of an earlier webaim survey here.</a>
           <a href="http://webaim.org/projects/screenreadersurvey5/">Screen Reader Survey #5 (2014)</a>&nbsp;65% of Respondents use headings to navigate through the page.</h4>
@@ -124,7 +126,7 @@
      
      <!-- first set of videos here -->
      <section>
-    <div class="container-fluid main_color" style="background:#ffffff">
+    <div class="container-fluid main_color">
       <div class="col-md-12 bb">
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
@@ -346,3 +348,4 @@
   </body>
 </html>
                                        
+  
