--- a/index_backup2.html
+++ b/index_backup2.html
@@ -279,10 +279,10 @@
       <section><!-- opens section for finding the right styles -->
     <div class="container-fluid main_color" style="background:#e3e7ea">
     <div class="col-md-12 bb">
-      <h2>Finding the Right Styles</h2>
+      <h2>Deciding on a Layout</h2>
     </div>
       <div class="col-md-4">
-        <h3>Image Seven: Chrome Browser Tool</h3>
+        <h3>Image Seven: Bootstrap mixed mobile and desktop</h3>
         <figure id="fig7">
         <img id="img7" src="http://cook-my-catch.com/T3special/bootstrap-mobile.jpg" class="img-responsive" alt="Screenshot showing an example provided by Bootstrap for mixed mobile and desktop framework.">
         <figcaption id="figcaptionimg7">Example provided by Bootstrap for mixed mobile and desktop framework</figcaption>
@@ -290,7 +290,7 @@
         <h4>content</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h3>Image Eight</h3>
+          <h3>Image Eight: Code Project on Bootstrap mixed layout</h3>
           <figure id="fig8">
         <img id="img8" src="http://cook-my-catch.com/T3special/project-mobile.jpg" class="img-responsive" alt="Screenshot showing the project using a mixed Bootstrap framework.">
         <figcaption id="figcaptionimg8">Screenshot showing the project using the mixed Bootstrap framework</figcaption>
@@ -298,7 +298,7 @@
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Nine</h3>
+          <h3>Image Nine: Final Decision Responsive Desktop</h3>
           <figure id="fig9">
         <img id="img9" src="http://cook-my-catch.com/T3special/project-responsive.jpg" class="img-responsive" alt="Screenshot showing the preferred framework where content is not too crowded.">
         <figcaption id="figcaptionimg9">Preferred layout allows better visual cognition -- content is not too crowded.</figcaption>
