--- a/index_backup2.html
+++ b/index_backup2.html
@@ -38,7 +38,7 @@
         <ul>
           <li>Source Documents</li>
           <li>Validation</li>
-          <li>Illustrations</li>
+          <li><a href="#screenshots">Screenshots</a></li>
         </ul>
       </nav>
       <!--enter here for Bootstrap nav class -->
@@ -211,7 +211,7 @@
     </section>
      <!-- second set of videos ends here -->
      
-    <section>
+    <section id="screenshots">
     <div class="container-fluid main_color" style="background:#e3e7ea;">
       <div class="col-md-12 bb">
         <h2>Looking for Problems</h2>
@@ -330,8 +330,9 @@
       </div><!-- closes md4 two -->
       <div class="col-md-4">
         <ul>
+          <li><a href="http://www.w3.org/TR/2008/WD-html5-diff-20080610/#absent-attributes">Absent Attributes</a></li>
           <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
-        <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
+          <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
         </ul>
       </div><!-- closes colmd4 three-->
       </footer>
