--- a/index_backup2.html
+++ b/index_backup2.html
@@ -36,9 +36,10 @@
       <nav>
         <header><h3>Nav Menu</h3></header>
         <ul>
-          <li>Source Documents</li>
-          <li>Validation</li>
+          <li><a href="#overview">Overview</a></li>
+          <li><a href="#videos">Videos</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
+          <li><a href="#references">References</a></li>
         </ul>
       </nav>
       <!--enter here for Bootstrap nav class -->
@@ -71,7 +72,7 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
-      <div class="col-md-12">
+      <div class="col-md-12" id="overview">
       <header><h2>How I Built This Web Page</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
@@ -126,7 +127,7 @@
      
      <!-- first set of videos here -->
      <section>
-    <div class="container-fluid main_color">
+    <div class="container-fluid main_color" id="videos">
       <div class="col-md-12 bb">
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
@@ -311,7 +312,7 @@
     </main><!-- all else are references -->
     <div class="container-fluid footer_color footer_one">
       <footer>
-        <div class="col-md-12 footer_one_underline">
+        <div class="col-md-12 footer_one_underline" id="references">
           <h2>References</h2>
         </div><!-- closes colmd12 underline-->
       <div class="col-md-4">
