--- a/index_backup2.html
+++ b/index_backup2.html
@@ -171,7 +171,7 @@
      <!-- first set of videos end here -->
      <!--second set of videos starts here -->
      <section>
-    <div class="container-fluid main_color">
+    <div class="container-fluid main_color" style="padding-bottom:25px;">
       <div class="col-md-12 bb">
         <h2>Videos</h2>
       </div><!-- closes colmd12 -->
