--- a/index_backup2.html
+++ b/index_backup2.html
@@ -28,6 +28,8 @@
     <!-- end USFSP -->
   </head>
   <body class="wrap_all">
+    
+  <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
     <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
@@ -70,8 +72,8 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
-  <main><!-- used for accessibility, screen readers will announce entering main section-->
-    <div class="container-fluid main_color">
+  <main><!-- used for accessibility, some screen readers will announce entering main section-->
+    <div class="container-fluid main_color" id="content" tabindex="-1">
       <div class="col-md-12" id="overview">
       <header><h2>How I Built This Web Page</h2></header>
       </div><!-- closes colmd12 -->
