--- a/index_backup2.html
+++ b/index_backup2.html
@@ -37,7 +37,7 @@
       </header>
       <nav>
         <header><h3>Nav Menu</h3></header>
-        <ul>
+        <ul style="display:inline;">
           <li><a href="#overview">Overview</a></li>
           <li><a href="#videos">Videos</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
@@ -331,7 +331,8 @@
           <ul>
             <li><a href="http://getbootstrap.com/">Bootstrap Home Page</a></li>
             <li><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></li>
-            <li><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></li> 
+            <li><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></li>
+            <li><a href="http://a11yproject.com/posts/skip-nav-links/">How–to: Use Skip Navigation links</a></li>
           </ul>
       </div><!-- closes md4 two -->
       <div class="col-md-4">
