--- a/index_backup2.html
+++ b/index_backup2.html
@@ -37,7 +37,7 @@
       </header>
       <nav>
         <header><h3>Nav Menu</h3></header>
-        <ul style="display:inline;">
+        <ul>
           <li><a href="#overview">Overview</a></li>
           <li><a href="#videos">Videos</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
@@ -50,9 +50,9 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"><li><a href="#overview">Overview</a></li></span>
+            <span class="icon-bar"><li><a href="#videos">Videos</a></li></span>
+            <span class="icon-bar"><li><a href="#screenshots">Screenshots</a></li></span>
           </button>
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
