--- a/index_backup2.html
+++ b/index_backup2.html
@@ -46,16 +46,16 @@
       </nav>
       <!--enter here for Bootstrap nav class -->
        <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <!--<div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"><li><a href="#overview">Overview</a></li></span>
-            <span class="icon-bar"><li><a href="#videos">Videos</a></li></span>
-            <span class="icon-bar"><li><a href="#screenshots">Screenshots</a></li></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Coding Exercise</a>
-        </div>
+        </div> -->
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
             <div class="form-group">
