--- a/index_backup2.html
+++ b/index_backup2.html
@@ -37,7 +37,7 @@
         <header><h3>Nav Menu</h3></header>
         <ul>
           <li><a href="#overview">Overview</a></li>
-          <li><a href="#videos">Videos</a></li>
+          <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
           <li><a href="#references">References</a></li>
         </ul>
