--- a/index_backup2.html
+++ b/index_backup2.html
@@ -33,7 +33,7 @@
     <header>
       <h1>Coding Exercise</h1>
       </header>
-      <nav>
+      <nav id="colorfulnav">
         <header><h3>Nav Menu</h3></header>
         <ul>
           <li><a href="#overview">Overview</a></li>
