--- a/index_backup2.html
+++ b/index_backup2.html
@@ -36,7 +36,7 @@
       <nav id="colorfulnav">
         <header><h3>Nav Menu</h3></header>
         <ul>
-          <li><a href="#overview">Overview</a></li>
+          <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
           <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
           <li><a href="#screenshots">Screenshots</a></li>
           <li><a href="#references">References</a></li>
