--- a/index_backup2.html
+++ b/index_backup2.html
@@ -39,7 +39,7 @@
           <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
           <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
           <li><a href="#screenshots" style="background:#7E96A0">Screenshots</a></li>
-          <li><a href="#references">References</a></li>
+          <li><a href="#references" style="background:#80B0A6">References</a></li>
         </ul>
       </nav>
       <!--enter here for Bootstrap nav class -->
