--- a/index_backup1.html
+++ b/index_backup1.html
@@ -33,13 +33,13 @@
     <header>
       <h1>Coding Exercise</h1>
       </header>
-      <nav>
+      <nav id="colorfulnav">
         <header><h3>Nav Menu</h3></header>
         <ul>
-          <li><a href="#overview">Overview</a></li>
-          <li><a href="#videos">Videos</a></li>
-          <li><a href="#screenshots">Screenshots</a></li>
-          <li><a href="#references">References</a></li>
+          <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
+          <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
+          <li><a href="#screenshots" style="background:#7E96A0">Screenshots</a></li>
+          <li><a href="#references" style="background:#80B0A6">References</a></li>
         </ul>
       </nav>
       <!--enter here for Bootstrap nav class -->
@@ -389,4 +389,4 @@
     <script src="http://cook-my-catch.com/bootstrap-master-1july2015/bootstrap-master/docs/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
-                              
+  
