--- a/index_backup2.html
+++ b/index_backup2.html
@@ -76,6 +76,16 @@
       <header><h2>How I Built This Web Page</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
+    
+    <!--<![Start of Visual]-->
+
+ 
+  <div class="container-fluid" style="background:url('../T3/images/HarborBoats.jpg') no-repeat center center;height:500px;background-size:cover;">&nbsp;</div>
+   <div class="row"><h6 style="text-align:center;">Image by Sharon Austin. Creative Commons Attribution 3.0 license.</h6>
+   </div>    
+</div>
+<!--  end visual -->
+    
     <div class="container-fluid main_color" style="background:#69b4a4">
         <div class="col-md-8">
           <section>
