--- a/index_backup2.html
+++ b/index_backup2.html
@@ -24,6 +24,8 @@
     <![endif]-->
     <!-- USFSP -->
     <!-- <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/> -->
+    <!-- above link was causing warnings in console due to mixed sources below link captures same font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
