--- a/index_backup2.html
+++ b/index_backup2.html
@@ -23,9 +23,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- USFSP -->
-    <!-- <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/> -->
-    <!-- above link was causing warnings in console due to mixed sources below link captures same font -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' rel='stylesheet' type='text/css'>
     <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
