--- a/index_backup2.html
+++ b/index_backup2.html
@@ -334,6 +334,7 @@
             <li><a href="http://a11yproject.com/posts/skip-nav-links/">How–to: Use Skip Navigation links</a></li>
             <li><a href="http://getbootstrap.com/getting-started/#support">Bootstrap and Internet Explorer 8 and 9</a></li>
             <li><a href="http://getbootstrap.com/getting-started/#respond-file-proto">Respond.js</a></li>
+            <li><a href="http://getbootstrap.com/getting-started/#support-validators">Validators in the context of Bootstrap</a></li>
           </ul>
       </div><!-- closes md4 two -->
       <div class="col-md-4">
