--- a/index_backup2.html
+++ b/index_backup2.html
@@ -34,7 +34,7 @@
       <h1>Coding Exercise</h1>
       </header>
       <nav id="colorfulnav">
-        <header><h3>Nav Menu</h3></header>
+        <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
           <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
           <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
@@ -45,13 +45,7 @@
       <!--enter here for Bootstrap nav class -->
        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
