--- a/index_backup2.html
+++ b/index_backup2.html
@@ -33,7 +33,7 @@
     <header>
       <h1>Coding Exercise</h1>
       </header>
-      <nav id="colorfulnav">
+      <nav id="colorfulnav" style="padding-bottom:50px;">
         <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
           <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
@@ -45,7 +45,13 @@
       <!--enter here for Bootstrap nav class -->
        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
