--- a/index_backup2.html
+++ b/index_backup2.html
@@ -31,9 +31,9 @@
     <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
-      <h1>Coding Exercise</h1>
+      <h1 class="sr-only">Coding Exercise</h1>
       </header>
-      <nav id="colorfulnav" style="padding-bottom:50px;">
+      <nav id="colorfulnav" style="padding-bottom:25px;padding-top:25px;">
         <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
           <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
