--- a/index_backup2.html
+++ b/index_backup2.html
@@ -33,15 +33,7 @@
     <header>
       <h1 class="sr-only">Coding Exercise</h1>
       </header>
-      <nav id="colorfulnav" style="padding-bottom:25px;padding-top:25px;">
-        <header><h3 class="sr-only">Nav Menu</h3></header>
-        <ul>
-          <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
-          <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
-          <li><a href="#screenshots" style="background:#7E96A0">Screenshots</a></li>
-          <li><a href="#references" style="background:#80B0A6">References</a></li>
-        </ul>
-      </nav>
+
       <!--enter here for Bootstrap nav class -->
        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -68,6 +60,19 @@
       </div>
     </nav>
       <!-- stop here for Bootstrap nav class -->
+      <!-- start here for colorful USFSP nav -->
+           <nav id="colorfulnav" style="padding-bottom:25px;padding-top:25px;">
+        <header><h3 class="sr-only">Nav Menu</h3></header>
+        <ul>
+          <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
+          <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
+          <li><a href="#screenshots" style="background:#7E96A0">Screenshots</a></li>
+          <li><a href="#references" style="background:#80B0A6">References</a></li>
+        </ul>
+      </nav> 
+      
+      
+      <!--end here for colorful USFSP nav -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
